--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@ body{
     font-family:sans-serif;
     width: 100%;
 }
+*{
+    text-decoration: none;
+    list-style-type: none;
+}
 .header-left-part{
     margin-left:100px;
     margin-right: 90px;
@@ -24,6 +28,7 @@ body{
     border: none;
     border-radius: 3px;
     background-color: orange;
+    cursor: pointer;
 }
 .grid-container{
     display: grid;
@@ -49,3 +54,76 @@ body{
     }
 }
 
+/*second part */
+.grid-container-1{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-top:110px;
+    background-image: url('img/dream-bg.png');
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.second-part-img img{
+    width: 300px;
+    height: 300px;
+    padding: 30px;
+    margin-left:100px;
+    margin-right: 90px;
+}
+.second-part-right-part{
+    margin-left:100px;
+    margin-right: 90px;
+    padding: 30px;
+}
+.resume-btn{
+    padding: 5px 30px;
+    background-color: rgb(58, 166, 166);
+    font-size: 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+@media screen and (max-width:590px){
+    .grid-container-1{
+        display: block;
+    }
+    .second-part-right-part{
+        margin-top: 50px;
+    }
+}
+/* Experience part */
+.grid-container-2{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    height: 500px;
+    margin-top: 100px;
+    background-image: url('/img/exp-bg.png');
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.full-stack-developer{
+    height:400px;
+    width: 300px;
+    border-left: 4px solid orange;
+    margin-left: 120px;
+    box-shadow: 10px 10px 40px gray;
+    padding: 30px;
+    line-height:25px;
+}
+.baby-developer{
+    height: 400px;
+    width: 300px;
+    border-left: 4px solid blue;
+    margin-left: 120px;
+    box-shadow: 10px 10px 40px gray;
+    padding: 30px;
+    line-height:25px;
+}
+@media screen and (max-width:590px){
+    .grid-container-2{
+        display: block;
+    }
+    .baby-developer{
+        margin-top: 50px;
+    }
+}
